--- a/src/pages/main/styles.css
+++ b/src/pages/main/styles.css
@@ -1,10 +1,10 @@
-.product-list{
+.product-list {
     max-width: 700px;
     margin: 20px auto 0;
     padding: 0 20px;
 }
 
-.product-list article{
+.product-list article {
     background: #FFF;
     border: 1px solid #DDD;
     border-radius: 5px;
@@ -12,14 +12,14 @@
     margin-bottom: 20px;
 }
 
-.product-list strong{
+.product-list strong {
     font-size: 16px;
     color: #999;
     margin-top: 5px;
     line-height: 24px;
 }
 
-.product-list a{
+.product-list a {
     cursor: pointer;
     height: 42px;
     border-radius: 5px;
@@ -34,10 +34,38 @@
     justify-content: center;
     align-items: center;
     transition: all 0.2s;
-
 }
 
-.product-list a:hover{
+.product-list a:hover {
     background: #da552f;
     color: #FFF;
+}
+
+.product-list .actions {
+    display: flex;
+    justify-content: space-between;
+    margin-bottom: 20px;
+}
+
+.product-list .actions button[disabled] {
+    opacity: 0.5;
+    cursor: default;
+}
+.product-list .actions button[disabled]:hover {
+    opacity: 0.5;
+    cursor: default;
+}
+.product-list .actions button {
+    padding: 10px;
+    border-radius: 5px;
+    border: 0;
+    background: #da552f;
+    color: #FFF;
+    font-size: 16px;
+    font-weight: bold;
+    cursor: pointer;
+}
+
+.product-list .actions button:hover {
+    opacity: 0.7;
 }
